k8s/config/aggregator-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-deployment
  labels:
    app: aggregator-microservice
spec:
  replicas: 0
  selector:
    matchLabels:
      app: aggregator-microservice
  template:
    metadata:
      labels:
        app: aggregator-microservice
    spec:
      containers:
      - name: aggregator-microservice
        image: petrakelkovic/aggregator-microservice:17
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator-service
spec:
  type: ClusterIP
  selector:
    app: aggregator-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
