k8s/config/humidity-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humidity-deployment
  labels:
    app: humidity-microservice
spec:
  replicas: 0
  selector:
    matchLabels:
      app: humidity-microservice
  template:
    metadata:
      labels:
        app: humidity-microservice
    spec:
      containers:
      - name: humidity-microservice
        image: petrakelkovic/humidity-microservice:17
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: humidity-service
spec:
  type: ClusterIP
  selector:
    app: humidity-microservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
