k8s/config/mosquitto-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-deployment
  labels:
    app: mosquitto
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0.21
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: config-volume
              mountPath: /mosquitto/config
            - name: data-volume
              mountPath: /mosquitto/data
      volumes:
        - name: config-volume
          configMap:
            name: mosquitto-config
        - name: data-volume
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
  type: ClusterIP
