k8s/config/temperature-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-deployment
  labels:
    app: temperature-microservice
spec:
  replicas: 0
  selector:
    matchLabels:
      app: temperature-microservice
  template:
    metadata:
      labels:
        app: temperature-microservice
    spec:
      containers:
      - name: temperature-microservice
        image: petrakelkovic/temperature-microservice:17
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: temperature-service
spec:
  type: ClusterIP
  selector:
    app: temperature-microservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
