k8s/config/aggregator-microservice-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rest-route
  namespace: default 
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: kube-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /reading
    backendRefs:
      - name: aggregator-service
        kind: Service
        namespace: default
        port: 8080
